# iarp-django-utils

./: .coveragerc  .gitignore  .isort.cfg  bitbucket-pipelines.yml  pyproject.toml  readme.rst  requirements-dev.txt  requirements.txt  setup.py  test_settings.py  tox.ini  urls.py
.github/workflows/: django.yml
example/example/: settings.py  urls.py
example/example/demo/: apps.py  models.py  urls.py  views.py
example/example/demo/migrations/: 0001_initial.py  0002_subitem.py
example/example/demo/templates/demo/: item_detail.html  item_list.html  navigation.html
iarp_django_utils/: __init__.py  app_settings.py  apps.py  auth_backends.py  helpers.py  model_managers.py  model_utils.py  models.py  pagination.py  shortcuts.py  template_contexts.py  view_mixins.py  views.py
iarp_django_utils/management/commands/: dump_primary_data.py  load_primary_data.py
iarp_django_utils/middleware/: cookie_login.py  request_is_ajax.py
iarp_django_utils/templates/iarp_django_utils/: pagination.html
iarp_django_utils/templatetags/: datetime_tools.py  dict_tools.py  get_hijacker.py  menu_tools.py  object_tools.py  page_contents.py  proper_pagination.py  request_posted_tools.py  request_tools.py  slug_word.py  string_tools.py  user_in_group.py
iarp_django_utils/tests/: base_test_classes.py  models.py  pagination.py  test_general.py  test_helpers.py  test_middlewares.py  test_models.py  test_pagecontents.py  test_pagination.py  test_templatetags.py
iarp_django_utils/tests/migrations/: 0001_initial.py  0002_pagecontent.py
